# ollama-rag-chainlit

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
.chainlit/: config.toml
config/: main.yml
frontend/: main.py  requirements.txt
ollama_rag/: app.py
ollama_rag/backend/: ollama_service.py
ollama_rag/data_model/: request_data_model.py
ollama_rag/utils/: utility.py  vdb.py
