[tool.poetry]
name = "ollama_rag"
version = "0.0.1"
description = ""
authors = ["Marc Mezger <marc.mezger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.0.354"
loguru = "^0.7.2"
omegaconf = "^2.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
grpcio = "^1.59.3"
grpcio-tools = "^1.59.3" # for qdrant
qdrant-client = "^1.6.9" # for qdrant
nltk = "^3.8.1"
pypdfium2 = "^4.24.0"
chainlit = "^0.7.700"
langchainhub = "^0.1.14"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.settings]
known_third_party = ["aleph_alpha_client", "chainlit", "dotenv", "fastapi", "langchain", "loguru", "nltk", "omegaconf", "pydantic", "qdrant_client"]

[tool.mypy]
# Disallow dynamic typing
disallow_any_unimported=true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true

[tool.ruff]
line-length = 170
[tool.pylint]
max-line-length = 170
